--- a/build.gradle
+++ b/build.gradle
@@ -37,3 +37,9 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+bootJar{
+	archivesBaseName = 'luckyday'
+	archiveFileName = 'service-api-0.1.jar'
+	archiveVersion = "0.1.0"
+}
