--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,6 @@ tasks.named('test') {
 
 bootJar{
 	archivesBaseName = 'luckyday'
-	archiveFileName = 'service-api-0.1.jar'
+	archiveFileName = 'lucky-api-0.1.jar'
 	archiveVersion = "0.1.0"
 }
