--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: lucky-backend
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://localhost:23306/lucky?characterEncoding=UTF-8&serverTimezone=UTC
+    url: jdbc:mariadb://223.130.131.239:23306/lucky?characterEncoding=UTF-8&serverTimezone=UTC
     username: root
     password: luckyDay
 
