--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,8 +12,8 @@ spring:
             user-name-attribute: id
         registration:
           kakao:
-            client-id: 1065441
-            client-secret: a71a4b6dae0f89a9ae442db5a6aaf6ce
+            client-id: ${kakao.client-id}
+            client-secret: ${kakao.client-secret}
             client-authentication-method: client_secret_post
             redirect-uri: http://localhost:8080/login/oauth2/code/kakao
             authorization-grant-type: authorization_code
