--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -48,3 +48,18 @@ spring:
       hibernate:
         format_sql: true #To beautify or pretty print the SQL
         show_sql: true #show sql
+
+springdoc:
+#  api-docs:
+#    path: /api-docs
+  default-consumes-media-type: application/json
+  default-produces-media-type: application/json
+  swagger-ui:
+    operations-sorter: alpha
+    tags-sorter: alpha
+    path: /api
+    disable-swagger-default-url: true
+    display-query-params-without-oauth2: true
+#  paths-to-match:
+#    - /**
+#    - /test/**
