--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,15 +15,15 @@ spring:
             client-id: ${kakao.client-id}
             client-secret: ${kakao.client-secret}
             client-authentication-method: client_secret_post
-#            redirect-uri: http://localhost:8080/login/oauth2/code/kakao
             redirect-uri: "{baseUrl}/oauth2/callback/{registrationId}"
             authorization-grant-type: authorization_code
-            client-name: kakao
+#            client-name: kakao
             scope:
               - profile_nickname
               - account_email
               - birthyear
-              - talk_message
+              - gender
+              - age_range
 
   datasource:
     driver-class-name: ${db.driver-class-name}
@@ -64,6 +64,8 @@ spring:
         show_sql: true #show sql
 
 secret-key: ${secret-key}
+
+redirect-lucky-url: "http://localhost:3000/auth/oauth-response/"
 
 springdoc:
 #  api-docs:
