--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
             client-id: ${kakao.client-id}
             client-secret: ${kakao.client-secret}
             client-authentication-method: client_secret_post
-            redirect-uri: "{baseUrl}/oauth2/callback/{registrationId}"
+            redirect-uri: "{baseUrl}/lucky/oauth2/callback/{registrationId}"
             authorization-grant-type: authorization_code
 #            client-name: kakao
             scope:
