럭키데이 카카오 일반앱 전환

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,9 +24,9 @@ spring:
             scope:
               - profile_nickname
               - account_email
-              - birthyear
-              - gender
-              - age_range
+#              - birthyear
+#              - gender
+#              - age_range
 
   datasource:
     driver-class-name: ${db.driver-class-name}
