modify redirect url, cors allow origin

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -69,9 +69,9 @@ spring:
 secret-key: ${secret-key}
 kakao-admin-key: ${kakao.admin-key}
 
-redirect-lucky-url: "http://localhost:3000/oauth2/kakao/callback"
-logout-redirect-uri: "http://localhost:3000"
-expiration-time: "3600"
+redirect-lucky-url: "https://luckyday.swygbro.com/oauth2/kakao/callback"
+logout-redirect-uri: "https://luckyday.swygbro.com"
+expiration-time: "86400"
 
 springdoc:
 #  api-docs:
