--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -71,6 +71,9 @@ kakao-admin-key: ${kakao.admin-key}
 
 redirect-lucky-url: "https://luckyday.swygbro.com/oauth2/kakao/callback"
 logout-redirect-uri: "https://luckyday.swygbro.com"
+
+#redirect-lucky-url: "http://localhost:3000/oauth2/kakao/callback"
+#logout-redirect-uri: "http://localhost:3000"
 expiration-time: "86400"
 
 springdoc:
