--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -87,19 +87,18 @@ springdoc:
 #    - /**
 #    - /test/**
 
----
-spring:
-  profiles:
-    active: prod
-
-redirect-lucky-url: "https://luckyday.swygbro.com/oauth2/kakao/callback"
-logout-redirect-uri: "https://luckyday.swygbro.com"
-
----
-spring:
-  profiles:
-    active: local
-
-redirect-lucky-url: "http://localhost:3000/oauth2/kakao/callback"
-logout-redirect-uri: "http://localhost:3000"
----
+#---
+#spring:
+#  profiles:
+#    active: prod
+#
+#redirect-lucky-url: "https://luckyday.swygbro.com/oauth2/kakao/callback"
+#logout-redirect-uri: "https://luckyday.swygbro.com"
+#
+#---
+#spring:
+#  profiles:
+#    active: local
+#
+#redirect-lucky-url: "http://localhost:3000/oauth2/kakao/callback"
+#logout-redirect-uri: "http://localhost:3000"
