--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,5 +1,7 @@
 spring:
-  profiles: prod
+  config:
+    activate:
+      on-profile: prod
 
 redirect-lucky-url: "https://luckyday.swygbro.com/oauth2/kakao/callback"
 logout-redirect-uri: "https://luckyday.swygbro.com"
