--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,5 +1,7 @@
 spring:
-  profiles: local
+  config:
+    activate:
+      on-profile: local
 
 redirect-lucky-url: "http://localhost:3000/oauth2/kakao/callback"
 logout-redirect-uri: "http://localhost:3000"
